add method to update streamer info
